[fix] fix boundary flicker issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -342,3 +342,7 @@ img {
   align-items: flex-start;
   padding: 10px;
 }
+
+button{
+  color: black;
+}
